# ToDoEsvan

./: README.md  pyproject.toml
src/: main.py
src/components/atoms/: add_button.py  todo_input.py  todo_tabs.py
src/components/molecules/: task_item.py
src/components/organisms/: todo_list.py
src/data/: crud.py  database.py  model.py
src/db/: Tables.sql
src/todoesvan/components/atoms/: add_button.py  todo_input.py  todo_tabs.py
src/todoesvan/components/molecules/: task_item.py
src/todoesvan/components/organisms/: todo_list.py
src/todoesvan/data/: database.py  model.py
src/todoesvan/data/repositories/: task_repository.py
src/todoesvan/services/: task_service.py
src/todoesvan/state/: task_store.py
src/todoesvan/utils/: assets.py  theme.py
src/todoesvan/views/: app_view.py  home_view.py
src/utils/: theme.py
src/views/: home_view.py
